--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,23 @@ spring:
     time-zone: GMT+8
     serialization:
       write-dates-as-timestamps: true # 是否把date转换成timestamps
+      #redis配置
+  redis:
+    host: 192.168.64.129
+    port: 6379
+    password:
+    jedis:
+      pool:
+        # 连接池最大连接数（使用负值表示没有限制）
+        max-active: 50
+        # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-wait: 3000
+        # 连接池中的最大空闲连接
+        max-idle: 5
+    # 连接超时时间（毫秒）
+    timeout:  6000
+    # Redis数据库索引（默认为0）
+    database: 0
 # mybatis-plus配置
 mybatis-plus:
   configuration:
