--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 <!--        <version>2.5.3</version>-->
 <!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
 <!--    </parent>-->
-    <groupId>com.demo</groupId>
+    <groupId>org.sjl.demo</groupId>
     <artifactId>demo1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>demo1</name>
@@ -22,7 +22,6 @@
             <artifactId>sjlbase</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-       
 
     </dependencies>
 
