--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <groupId>org.sjl.demo</groupId>
     <artifactId>demo1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+<!--    <packaging>jar</packaging>-->
+
     <name>demo1</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -24,6 +26,19 @@
         </dependency>
 
     </dependencies>
-
-
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.yml</include>
+                </includes>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
